# GameChallenge

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/breakout/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  api.cpp  api.h
src/common/event/: event.h  event_SDL.cpp  event_SDL_enum.h  event_SDL_type.h  event_handler.cpp
src/common/graphics/: image.h  image_SDL.cpp  render_buffer.h  render_buffer_SDL.cpp  renderer.cpp  renderer.h  shader.c  shader.h  texture.c  texture.h
src/common/io/: file.cpp  file.h  file_find.cpp
src/common/memory/: free.h  free_SDL.cpp
src/common_test/: CMakeLists.txt  main.cpp
